--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/addAutoTradeConfirm.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/addAutoTradeConfirm.vm
@@ -29,19 +29,24 @@ $(function(){
         
         <div class="form-payInto">
             <form class="common-form" action="${ufbDomain}/setting/addAutoTradeSubmit.htm" method="post">
-				custno: <input id="custno" name="custno" value="${AutoTradeVo.custno}" type="text"/>
+				</br>custno: <input id="custno" name="custno" value="${AutoTradeVo.custno}" type="text"/>
+				</br>frombankserialid: <input id="frombankserialid" name="frombankserialid" value="${AutoTradeVo.frombankserialid}" type="text"/>
+				</br>tofundcorpno: <input id="tofundcorpno" name="tofundcorpno" value="${AutoTradeVo.tofundcorpno}" type="text"/>
+				</br>tofundcode: <input id="tofundcode" name="tofundcode" value="${AutoTradeVo.tofundcode}" type="text"/>
+				</br>totradeacco: <input id="totradeacco" name="totradeacco" value="${AutoTradeVo.totradeacco}" type="text"/>
+				</br>tochargetype: <input id="tochargetype" name="tochargetype" value="${AutoTradeVo.tochargetype}" type="text"/>
+				
+				</br>tradetype: <input id="tradetype" name="tradetype" value="${AutoTradeVo.tradetype}" type="text"/>
+				</br>type: <input id="type" name="type" value="${AutoTradeVo.type}" type="text"/>
 				</br>apkind: <input id="apkind" name="apkind" value="${AutoTradeVo.apkind}" type="text"/>
 				</br>cycle: <input id="cycle" name="cycle" value="${AutoTradeVo.cycle}" type="text"/>
 				</br>dat: <input id="dat" name="dat" value="${AutoTradeVo.dat}" type="text"/>
-				</br>autoamt: <input id="autoamt" name="autoamt" value="${AutoTradeVo.autoamt}" type="text"/>
 				</br>nextdate: <input id="nextdate" name="nextdate" value="${AutoTradeVo.nextdate}" type="text"/>
+				
+				</br>autoamt: <input id="autoamt" name="autoamt" value="${AutoTradeVo.autoamt}" type="text"/>
+
 				</br>summary: <input id="summary" name="summary" value="${AutoTradeVo.summary}" type="text"/>
-				</br>tofundcorpno: <input id="tofundcorpno" name="tofundcorpno" value="${AutoTradeVo.tofundcorpno}" type="text"/>
-				</br>tofundcode: <input id="tofundcode" name="tofundcode" value="${AutoTradeVo.tofundcode}" type="text"/>
-				</br>tobankserialid: <input id="tobankserialid" name="tobankserialid" value="${AutoTradeVo.tobankserialid}" type="text"/>
-				</br>totradeacco: <input id="totradeacco" name="totradeacco" value="${AutoTradeVo.totradeacco}" type="text"/>
 				<ul>
-                  
                     <li>
                         <span class="form-title">交易密码</span>
                         <input id="tradePwd" name="tradePwd" class="input-text" maxlength="20" type="password" value="">
