--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAutoTrade.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAutoTrade.vm
@@ -9,8 +9,8 @@ $(function(){
 
 	$(".btn-updateAutoTrade").on("click", function(){
 		$("#autoid").val($(this).attr("autoid"));
-		$("#form-settingAutoTrade").attr("action", "../setting/updateAutoTrade.htm");
-		$("#form-settingAutoTrade").submit();
+		$("#form-autoTrade-index").attr("action", "../setting/updateAutoTrade.htm");
+		$("#form-autoTrade-index").submit();
 	});
 	
 	$(".set-unbind").on("click", function(){
@@ -40,7 +40,7 @@ $(function(){
 </head>
 <body>
     <div class="body">
-    	<form id="form-settingAutoTrade" action="${ufbDomain}/setting/settingAutoTrade.htm" method="post">
+    	<form id="form-autoTrade-index" action="${ufbDomain}/setting/autoTrade_index.htm" method="post">
 		<input id="autoid" name="autoid" value="" type="hidden"/>
         <div class="inner clearfix">
             <div class="title">
@@ -51,7 +51,7 @@ $(function(){
     				<li><a href="${staticDomain}/setting/settingAccount.htm">账户信息</a></li>
                     <li><a href="${staticDomain}/setting/settingPassword.htm">密码设置</a></li>
                     <li><a href="${staticDomain}/setting/settingCard.htm">银行卡管理</a></li>
-                    <li><a class="current" href="${staticDomain}/setting/settingAutoTrade.htm">自动理财设置</a></li>
+                    <li><a class="current" href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a></li>
                 </ul>
             </div>
             <div class="main fr">
@@ -60,7 +60,7 @@ $(function(){
 				</div>
 				<!--f3f3f1-->
 				<a href="#" style="display:float;margin:0px 0px 10px 20px;background-color:">进行中</a>
-				<a href="${staticDomain}/setting/addAutoTrade.htm" style="text-decoration:underline;display:float;margin:0px 0px 10px 20px;background-color:">添加自动充值计划</a>
+				<a href="${staticDomain}/setting/autoTrade_add.htm" style="text-decoration:underline;display:float;margin:0px 0px 10px 20px;background-color:">添加自动充值计划</a>
                 <div class="detail-list" style="width:700px;margin:10px 0px 20px 20px">
 					<table width="100%" style="border: 2px solid #ddd">
 						<thead>
