--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/updateAutoTrade.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/updateAutoTrade.vm
@@ -32,7 +32,7 @@ $(function(){
 		if(!check_cash($("#autoamt"))){
 			return false;
 		}
-		$(".common-form").attr("action","../setting/addAutoTradeConfirm.htm");
+		$(".common-form").attr("action","../setting/autoTrade_preview.htm");
 	});
 });
 </script>
@@ -46,7 +46,7 @@ $(function(){
         <div class="notice"></div>
         
         <div class="form-payInto">
-            <form class="common-form" action="${ufbDomain}/setting/addAutoTrade.htm" method="post">
+            <form class="common-form" action="${ufbDomain}/setting/autoTrade_add.htm" method="post">
 				<input id="frombankserialid" name="frombankserialid" value="${curCard.serialid}" type="hidden"/>
 				<ul>
                     <li class="clearfix">
