--- a/ufb.web/src/main/webapp/css/common.css
+++ b/ufb.web/src/main/webapp/css/common.css
@@ -113,6 +113,54 @@
 	width: 100%;
 	height: 100%;
 }
+/* tabs - step */
+.container-step {
+	padding-top: 20px;
+	height: 700px;
+}
+.step-title {
+	width: 858px;
+	font-size: 14px;
+	padding: 10px 0;
+}
+.step-title .link {
+	font-size: 12px;
+}
+.step-tabs {
+	width: 858px;
+	height: 41px;
+	overflow: hidden;
+	background: url("../images/bg_tabs.png") no-repeat 0 -999px;
+}
+.step-tabs.tabs-step1 {
+	background-position: 0 0;
+}
+.step-tabs.tabs-step2 {
+	background-position: 0 -41px;
+}
+.step-tabs.tabs-step3 {
+	background-position: 0 -82px;
+}
+.step-tabs .tab {
+	width: 286px;
+	height: 41px;
+	text-align: center;
+	line-height: 41px;
+	font-size: 14px;
+	color: #666666;
+}
+.step-tabs .tab.on {
+	color: #ffffff;
+}
+.step-panels {
+	position: relative;
+	height: 300px;
+	margin-top: 20px;
+}
+.step-panels .panel {
+	top: 20px;
+	transition:all 0.3s;
+}
 /* positon */
 .bc {
 	margin:0 auto;
@@ -134,6 +182,10 @@
 }
 .db {
 	display:block;
+}
+.value-big {
+	font-size: 28px;
+	color: #cb3849;
 }
 .shadow-normal {
 	-webkit-box-shadow:1px 1px 1px 0px #ccc;
@@ -217,6 +269,12 @@ a.btn.off {
 }
 a.link {
 	color: #2f8fbf;
+	cursor: pointer;
+}
+a.link:hover {
+	color: #cb3849;
+}
+a.link-underline {
 	text-decoration: underline;
 }
 .m-b10 {
@@ -450,7 +508,7 @@ a.link {
 }
 .error-box .error-title {
 	line-height: 40px;
-    	height: 40px;
+    height: 40px;
 	font-size: 14px;
 	padding: 0 20px;
 	position: relative;
@@ -542,13 +600,17 @@ a.link {
 	margin-right: 6px;
 	vertical-align: middle;
 }
-.common-form li input.input-button {
+.common-form li .input-button {
 	width: 121px;
 	height: 36px;
 	border: 0;
 	color: #ffffff;
 	background-color: #CB3849;
+	text-align: center;
 	/*background-color: #b4b4b5;*/
+}
+.common-form li .input-button.fl {
+	margin-right: 23px;
 }
 .common-form li input.input-button.ok {
 	color: #ffffff;
@@ -557,6 +619,13 @@ a.link {
 .common-form li input.input-button.off {
 	background-color: #b4b4b5;
 	color: #ffffff;
+}
+.common-form li input.input-short {
+	width: 20px;
+	margin-left: 20px;
+}
+.common-form li input.input-short.focus {
+	border-color: #2F8FBF;
 }
 .common-form li input.input-code {
 	width: 95px;
@@ -614,6 +683,9 @@ a.link {
 	text-decoration: underline;
 	margin-right: 20px;
 }
+.common-form li label.tips {
+	font-size: 12px;
+}
 .login-form ul {
 	width: 330px;
 	padding: 20px 40px;
@@ -667,11 +739,10 @@ a.link {
 	display: none;
 }
 .input-select {
-	width: 240px;
+	width: 264px;
 	height: 34px;
 	float:left;
 	margin: 0 24px 0 0;
-	padding: 0 12px;
 	border: 1px solid #cbcbcb;
 	font-size: 14px;
 	font-family: "microsoft yahei";
@@ -735,6 +806,10 @@ a.link {
 .input-select .card .card-lastNumber {
 	font-size: 12px;
 	color: #b4b4b5;
+	margin-right: 10px;
+}
+.input-select .input-options .card .card-lastNumber {
+	margin-right: 0px;
 }
 .input-options .card-list {
 	width: 240px;
@@ -755,6 +830,7 @@ a.link {
 .input-select .bank {
 	height:34px;
 	position: relative;
+	padding-left: 12px;
 }
 .input-select .bank img {
 	position:absolute;
@@ -773,20 +849,34 @@ a.link {
 	width: 140px;
 	margin-top:10px;
 	margin-left:10px;
+	padding: 0;
 	float:left;
 	border:1px solid #cbcbcb;
 }
 .input-options .bank img {
 	left: 0px;
 }
+/* input - card */
+.input-card {
+	width: 240px;
+	height: 38px;
+	padding: 0 12px;
+	margin: 0 24px 0 0;
+	border: 1px solid #cbcbcb;
+	font-size: 14px;
+	font-family: "microsoft yahei";
+	background-color: #fff;
+}
+.input-card img {
+	vertical-align: middle;
+}
 .form-done {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 230px;
 	height: 250px;
 	margin-top: -125px;
-	margin-left: -135px;
+	margin-left: -180px;
 	padding: 50px 0 0 70px;
 	background: url("../images/icon.png") no-repeat -154px -110px;
 }
@@ -798,7 +888,11 @@ a.link {
 }
 .form-done .text {
 	font-size: 12px;
+	line-height: 2;
 	color: #888888;
+}
+.form-done .tips {
+
 }
 .form-done .btn {
 	margin: 35px 0;
@@ -860,10 +954,6 @@ a.link {
 .base-table .value {
 	font-size: 18px;
 	color: #595757;
-}
-.base-table .value-big {
-	font-size: 28px;
-	color: #cb3849;
 }
 .base-table .link {
 	font-size: 12px;
@@ -1053,7 +1143,6 @@ a.link {
 .form-register label,
 .form-register label a {
 	font-size: 12px;
-	color: #808080;
 }
 .form-register label a:hover {
 	text-decoration: underline;
@@ -1087,7 +1176,7 @@ a.link {
 /* find */
 .container-find {
 	padding-top: 50px;
-	height: 650px;
+	height: 600px;
 }
 .find-tabs {
 	width: 858px;
@@ -1118,6 +1207,7 @@ a.link {
 .find-panels {
 	position: relative;
 	height: 300px;
+	margin-top: 50px;
 }
 .find-panels .panel {
 	top: 20px;
@@ -1140,6 +1230,18 @@ a.link {
 .center .body .title-side {
 	width: 225px;
 }
+.center .body .title-side .account-setting {
+	width: 18px;
+	height: 18px;
+	background: url("../images/icon-setting.png") no-repeat 0 0;
+	margin-top: 11px;
+	margin-right: 10px;
+}
+.center .body .e-bill {
+	color: #ffffff;
+	line-height: 40px;
+	margin-right: 15px;
+}
 .center .side .info-account {
 	background-color: #ffffff;
 	border: 1px solid #d5d5d4;
@@ -1161,6 +1263,7 @@ a.link {
 .center .side .info-account .account-header {
 	text-align: center;
 	padding-top: 15px;
+	position: relative;
 }
 .center .side .info-account .account-header .header-avatar {
 	width: 61px;
@@ -1171,6 +1274,31 @@ a.link {
 }
 .center .side .info-account .on .account-header .header-avatar {
 	background: url("../images/avatar.png") no-repeat center center;
+}
+.center .side .info-account .account-header .tooltips {
+	width: 11px;
+	height: 11px;
+	position: absolute;
+	right: 30px;
+	top: 20px;
+	background: url("../images/icon-q2.png") no-repeat 0 0;
+}
+.center .side .info-account .account-header .tooltips .tooltips-text {
+	display: none;
+	width: 170px;
+	height: 52px;
+	overflow: hidden;
+	padding: 10px;
+	position: absolute;
+	top: -75px;
+	right: -58px;
+	background: url("../images/tooltips_con.png") no-repeat 0 0;
+}
+.center .side .info-account .account-header .tooltips:hover .tooltips-text {
+	display: block;
+}
+.center .side .info-account .on .account-header .tooltips {
+	background: url("../images/icon-q1.png") no-repeat 0 0;
 }
 .center .side .info-account .account-header .header-name {
 }
@@ -1217,9 +1345,6 @@ a.link {
 	margin-left: -105px;
 	color: #ffffff;
 	background-color: #cb3849;
-}
-.center .body .title-side {
-	width: 225px;
 }
 .center .side .info-yield {
 	margin-top: 9px;
@@ -1302,6 +1427,157 @@ a.link {
 .center .form-payInto,
 .center .form-cash {
 	padding-bottom: 200px;
+}
+.center .bill-header {
+	background-color: #ffffff;
+	padding: 15px 0;
+	border: 1px solid #e3e3e3;
+}
+.center .bill-header a {
+}
+.center .bill-header a.on {
+	color: #ffffff;
+	background-color: #2f8fbf;
+}
+.center .bill-header .item-date input {
+	width: 90px;
+	text-align: center;
+	border: 1px solid #CBCBCB;
+	color: #888888;
+}
+.center .bill-header .item-date a {
+	padding: 2px 10px;
+	margin-left: 20px;
+	vertical-align: middle;
+}
+.center .bill-header .item-cate a,
+.center .bill-header .item-type a {
+	float: left;
+	width: 60px;
+	margin-right: 60px;
+	text-align: center;
+	height: 24px;
+	line-height: 2;
+}
+.center .bill-header .search-con .search-item {
+	padding-left: 150px;
+	position: relative;
+	margin-bottom: 10px;
+}
+.center .bill-header .search-con .search-item .item-title {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 150px;
+	text-align: center;
+	line-height: 24px;
+}
+.center .bill-header .total {
+	width: 150px;
+	height: 100px;
+	padding-left: 60px;
+	border-left: 1px solid #e3e3e3;
+}
+.center .bill-header .total .name {
+	line-height: 30px;
+}
+.center .bill-header .total .value-big {
+	padding-top: 25px;
+}
+.center .bill-list {
+	margin: 15px 0 50px;
+}
+.center .bill-list table {
+	border: 1px solid #e3e3e3;
+}
+.center .bill-list td {
+	line-height: 2;
+	padding: 10px;
+	vertical-align: middle;
+}
+.center .bill-list thead {
+	background-color: #f4f9fc;
+}
+.center .bill-list tbody tr {
+	background-color: #ffffff;
+	border-top: 1px solid #e3e3e3;
+}
+.center .bill-detail {
+	padding: 30px 30px 50px 30px;
+	background-color: #ffffff;
+	border: 1px solid #e3e3e3;
+	margin-bottom: 150px;
+}
+.center .bill-detail table td {
+	vertical-align: middle;
+	line-height: 2;
+	padding: 10px 0;
+}
+.center .bill-detail table td img {
+	vertical-align: middle;
+}
+.center .bill-detail table td span {
+	padding-left:40px;
+}
+.center .bill-detail .detail-process {
+	padding-top: 50px;
+	width: 400px;
+	height: 100px;
+	border-left: 1px solid #e3e3e3;
+}
+.center .bill-detail .detail-process .process-line {
+	width: 260px;
+	margin: 0 auto;
+	position: relative;
+	background-color: #b4b4b5;
+}
+.center .bill-detail .detail-process .process-line .moving-line {
+	height: 1px;
+	width: 100%;
+}
+.center .bill-detail .detail-process .process-point {
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	top: -12px;
+	background: url("../images/icon-point.png") no-repeat 0 0;
+}
+.center .bill-detail .detail-process .point-start {
+	left: -12px;
+}
+
+.center .bill-detail .detail-process .point-end {
+	right: -12px;
+}
+.center .bill-detail .process-success .process-point.point-end {
+	background-position: 0 0;
+}
+.center .bill-detail .process-success .moving-line {
+	background-color: #8dc21f;
+}
+.center .bill-detail .process-ing .process-point.point-end {
+	background-position: -48px 0;
+}
+.center .bill-detail .process-ing .moving-line {
+	width: 50%;
+	background-color: #8dc21f;
+}
+.center .bill-detail .process-fail .process-point.point-end {
+	background-position: -24px 0;
+}
+.center .bill-detail .process-fail .moving-line {
+}
+.center .bill-detail .detail-process .process-point .point-text {
+	width: 200px;
+	padding-top: 30px;
+	left: 50%;
+	margin-left: -88px;
+	text-align: center;
+}
+.center .bill-detail .detail-btn a {
+	width: 100px;
+	height: 35px;
+	margin-right: 20px;
 }
 /* help */
 .help .body {
@@ -1400,11 +1676,11 @@ a.link {
 }
 .setting .password-tabs .btn {
 	margin-right: 30px;
-	background-color: #b4b4b5;
-	color: #ffffff;
 }
+
 .setting .password-tabs .btn.on,
 .setting .password-tabs .btn:hover {
+	color: #ffffff;
 	background-color: #cb3849;
 }
 
@@ -1499,7 +1775,73 @@ a.link {
 	background: url("../images/icon-plus.png") no-repeat 40px center;
 }
 .setting .content-autoFund {
-	height: 400px;
+	font-size: 12px;
+}
+.setting .content-autoFund .autoFund-item {
+	margin-bottom: 20px;
+}
+.setting .content-autoFund .item-title .link {
+	margin-left: 40px;
+}
+.setting .content-autoFund .item-table {
+	border: 1px solid #e3e3e3;
+	text-align: center;
+	font-size: 12px;
+	color: #888888;
+}
+.setting .content-autoFund .item-table th {
+	vertical-align: middle;
+	color: #595757;
+	font-weight: normal;
+}
+.setting .content-autoFund .item-name {
+	position: relative;
+	border-right: 1px solid #e3e3e3;
+}
+.setting .content-autoFund .item-type {
+	position: absolute;
+	top: -1px;
+	left: -1px;
+	line-height: 1.5;
+	padding: 0px 5px;
+	background-color: #cb3849;
+	color: #ffffff;
+}
+.setting .content-autoFund .item-do {
+	position: relative;
+	background-color: #fff;
+}
+.setting .content-autoFund .item-do .do-title {
+	color: #2f8fbf;
+	cursor: pointer;
+}
+.setting .content-autoFund .item-do .do-list {
+	position: absolute;
+	top: 30px;
+	left: 50%;
+	width: 44px;
+	margin-left: -22px;
+	line-height: 2;
+	border: 1px solid #e3e3e3;
+	display: none;
+	background-color: #fff;
+}
+.setting .content-autoFund .item-do:hover .do-list {
+	display: block;
+}
+.setting .content-autoFund .item-tips {
+	color: #b4b4b5;
+}
+.setting .content-autoFund .no-result {
+	text-align: left;
+	width: 562px;
+	height: 31px;
+	margin: 0 auto;
+	padding-left: 26px;
+	padding-bottom: 10px;
+	line-height: 26px;
+	background: url("../images/bg-no-result.png") no-repeat 0 0;
+
 }
 .setting .setting-newCard {
 	position: relative;
