--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP1.vm
@@ -9,35 +9,9 @@ $(function(){
 
 	$("#container").removeClass("setting");
 
-	// 金额表单控制
-	$("#autoamt").on("blur", function(){
-		var autoamt = formatCurrency1($("#autoamt").val());
-		if(autoamt == '0.00'){
-			$("#autoamt").val('');
-			showTips($(this), "请输入正确格式的金额，比如1000.00！");
-		}else{
-			$("#autoamt").val(autoamt);
-		}
-	});
-	
-	// 点击银行卡
-	$(".card").on("click", function(){
-		$("#frombankserialid").val($(this).attr("serialid"));
-		$("#frombankno").val($(this).attr("frombankno"));
-		$("#frombanktail").val($(this).attr("frombanktail"));
-		//$("#fromtradeacco").val($(this).attr("tradeacco"));
-		//$("#totradeacco").val($(this).attr("tradeacco"));
-	});
-	
 	// 表单提交时，验证	
 	$("#submit").on("click", function(){
-		if(!check_cash($("#autoamt"))){
-			return false;
-		}
-		if(!check_autoDat($("#dat"))){
-			return false;
-		}
-		$(".common-form").attr("action","../setting/autoTrade_preview.htm");
+		$(".common-form").attr("action","../setting/autoTradePause_preview.htm");
 	});
 });
 </script>
@@ -45,20 +19,23 @@ $(function(){
 <body>
 <div class="body">
     <div class="inner container-step">
-        <div class="step-title clearfix">自动充值设置<a class="link link-underline fr" href="${staticDomain}/setting/autoTrade_index.htm">&lt;&lt;自动充值设置</a></div>
+        <div class="step-title clearfix">暂停自动充值计划<a class="link link-underline fr" href="${staticDomain}/setting/autoTrade_index.htm">&lt;&lt;自动充值设置</a></div>
         <div class="step-tabs tabs-step1 clearfix">
-            <a class="tab fl on" href="javascript:;">自动充值</a>
-            <a class="tab fl" href="javascript:;">预览自动充值计划</a>
-            <a class="tab fl" href="javascript:;">开通结果</a>
+            <a class="tab fl on" href="javascript:;">自动充值（暂停）</a>
+            <a class="tab fl" href="javascript:;">预览自动充值计划（暂停）</a>
+            <a class="tab fl" href="javascript:;">结果（暂停）</a>
         </div>
         <div class="step-panels">
-			<form class="common-form" action="${ufbDomain}/setting/autoTrade_add.htm" method="post">
+			<form class="common-form" action="${ufbDomain}/setting/autoTrade_pause.htm" method="post">
 				<input id="frombankserialid" name="frombankserialid" value="${curCard.serialid}" type="hidden"/>
                 #set($tailStr=$curCard.bankacco)
 				#set($start=$tailStr.length() - 4)
 				#set($end=$tailStr.length())
 				<input id="frombankno" name="frombankno" value="${curCard.bankno}" type="hidden"/>
 				<input id="frombanktail" name="frombanktail" value="$tailStr.substring($start,$end)" type="hidden"/>
+				<input id="autoid" name="autoid" value="${AutoTradeVo.autoid}" type="hidden"/>
+				
+				
 				<div class="panel">
                     <ul>
                         <li>
@@ -72,42 +49,28 @@ $(function(){
                                     <img src="${staticDomain}/images/bank_${curCard.bankno}.png">
                                     <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                 </div>
-								<div class="input-options">
-                                    <div class="card-list clearfix">
-    									#foreach($card in $cardList)
-											#set($tailStr=$card.bankacco)
-    										#set($start=$tailStr.length() - 4)
-    										#set($end=$tailStr.length())
-                                        <a class="card" href="javascript:;" 
-    										serialid="${card.serialid}"
-											frombankno="${card.bankno}"
-											frombanktail="$tailStr.substring($start,$end)"
-											>
-    										<img src="${staticDomain}/images/bank_${card.bankno}.png">
-                                            <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
-                                        </a>
-    									#end
-                                    </div>
-                                </div>
                             </div>
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
 						<li>
                             <span class="form-title">充值金额</span>
-                            <input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
+                            <input id="autoamt-display" disabled name="autoamt-display" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
+							<input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="hidden" value="$!{AutoTradeVo.autoamt}">元								
                             <span class="tips-normal">请填写充值金额</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">设置充值时间</span>
-							每月<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
+							每月<input id="dat-display" disabled name="dat-display" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
+								<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="hidden" value="$!{AutoTradeVo.dat}">
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
 						<li>
                             <span class="form-title">备注</span>
-                            <input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
+                            <input id="summary-display" disabled name="summary-display" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
+							<input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="hidden" value="$!{AutoTradeVo.summary}">
                             <span class="tips-normal">如：收费理财、闲置资金</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
