--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -129,12 +129,24 @@ $(function(){
 #if("1"==$TAB || "1S"==$TAB)
     $("#tab1").addClass("on");
     $("#panel1").removeClass("slide-out");
+	
+	$("#panel1").show();
+	$("#panel2").hide();
+	$("#panel3").hide();
 #elseif("2"==$TAB || "2S"==$TAB)
     $("#tab2").addClass("on");
     $("#panel2").removeClass("slide-out");
+	
+	$("#panel1").hide();
+	$("#panel2").show();
+	$("#panel3").hide();
 #elseif("3"==$TAB || "3S"==$TAB)
 	$("#tab3").addClass("on");
     $("#panel3").removeClass("slide-out");
+	
+	$("#panel1").hide();
+	$("#panel2").hide();
+	$("#panel3").show();
 #end
 
 #if("1S"==$TAB)
