--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -15,6 +15,11 @@ $(function(){
 		$("#form-index").attr("action", "../cust/logout.htm");
 		$("#form-index").submit();
 	});
+	
+	$("#btn-queryIndex").on("click",function(){
+		$("#form-index").attr("action", "../trade/query_index.htm");
+		$("#form-index").submit();
+	});
 });
 </script>
 </head>
@@ -110,7 +115,7 @@ $(function(){
 						#if($S_CUSTINFO.openaccount=="Y")
                         <div class="item-detail clearfix">
                             <div class="detail-list">
-                                <div class="list-title">资金明细<a class="link fr" href="detailList.html">查看更多</a></div>
+                                <div class="list-title">资金明细<a id="btn-queryIndex" class="link fr" href="#">查看更多</a></div>
                                 <table width="100%">
                                     <thead>
                                     <tr>
