--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/help/helpContact.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/help/helpContact.vm
@@ -54,7 +54,7 @@
                         <img src="${staticDomain}/images/logo_header.png" width="130">
                         <p>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></p>
                         <p>海富通产品：400-8840-099</p>
-                        <p>上海泛投信息科技有限公司版权所有 ©2014沪ICP14054347号</p>
+                        <p>上海幼赋金融信息服务有限公司版权所有 ©2014沪ICP14054347号</p>
                     </div>
                 </div>
             </div>
