--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
@@ -112,7 +112,7 @@ $(function(){
                 <p>海富通产品：400-8840-099</p>
             </div>
             <div class="copyright">
-                <p>上海泛投信息科技有限公司版权所有 ©2015</p>
+                <p>上海幼赋金融信息服务有限公司版权所有 ©2015</p>
                 <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
             </div>
         </div>
