--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepU2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepU2.vm
@@ -40,6 +40,7 @@ $(function(){
         </div>
         <div class="step-panels">
 			<form id="form-autoTrade-result" class="common-form" action="${ufbDomain}/setting/autoTradeUpdate_result.htm" method="post">
+				${refreshTools.genInputHtml()}
 				<input id="custno" name="custno" value="${AutoTradeVo.custno}" type="hidden"/>
 				<input id="frombankserialid" name="frombankserialid" value="${AutoTradeVo.frombankserialid}" type="hidden"/>
 				<input id="frombankno" name="frombankno" value="${AutoTradeVo.frombankno}" type="hidden"/>
